Fix subjective relative clause particle

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -21,8 +21,8 @@ subordinate clause (an inner sentence). The subordinate clause acts similar to a
 allows you to refer to the action of the verb as a noun.
 
 <HisyeoTabs>
-    <p>lı küzoü ü do kelo vio öni tüek.&emsp;<em>Playing on computers is awesome.</em></p>
-    <p>noyo süko do kelo vio öni tüek.&emsp;<em>I like playing on computers.</em></p>
+    <p>lı küzoü ü xe kelo vio öni tüek.&emsp;<em>Playing on computers is awesome.</em></p>
+    <p>noyo süko xe kelo vio öni tüek.&emsp;<em>I like playing on computers.</em></p>
 </HisyeoTabs>
 
 I didn't start the first example with a subject and instead provided it after
@@ -42,15 +42,15 @@ Using this knowledge, we can build the first sentences for meeting people.
 <HisyeoTabs>
     <p>noyo monodo niün hoi suhot dus&emsp;<em>I am meeting them at 10</em></p>
     <p>nü küu monodo oxon cöüvon pıtün&emsp;<em>Let's meet for supper</em></p>
-    <p>nimü völun do monodo noyo hoi cıhöü ko&emsp;<em>Do you want to meet me later?</em></p>
+    <p>nimü völun xe monodo noyo hoi cıhöü ko&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
 
 ### How To Greet
 
 <HisyeoTabs>
-    <p>lı xön ü do monodo nimü löicök.&emsp;<em>It is so nice to meet you.</em></p>
-    <p>pı yüpik ü do monodo nimü.&emsp;<em>Lovely to meet you.</em></p>
-    <p>lı xön ëto ü do dëko nimü.&emsp;<em>It is great to see you.</em></p>
+    <p>lı xön ü xe monodo nimü löicök.&emsp;<em>It is so nice to meet you.</em></p>
+    <p>pı yüpik ü xe monodo nimü.&emsp;<em>Lovely to meet you.</em></p>
+    <p>lı xön ëto ü xe dëko nimü.&emsp;<em>It is great to see you.</em></p>
 </HisyeoTabs>
 
 ### Responding To A Greeting
@@ -59,7 +59,7 @@ Using this knowledge, we can build the first sentences for meeting people.
     <p>lı konxo hön nimü.<em>Thank you.</em></p>
     <p>lı konxo pı ëto löicök.&emsp;<em>Thank you so much.</em></p>
     <p>oxon noyo ütok.&emsp;<em>For me also.</em></p>
-    <p>lı xön ü do monodo nimü ütok.&emsp;<em>It is nice to meet you too.</em></p>
+    <p>lı xön ü xe monodo nimü ütok.&emsp;<em>It is nice to meet you too.</em></p>
 </HisyeoTabs>
 
 ### When You'll Meet Again
