--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -221,7 +221,7 @@ Any series of numbers can be an ordinal as long as they appear on the right-hand
 side of a noun phrase.
 
 <HisyeoTabs>
-  <p>nıwos son do hoi ximol "third house on the left"</p>
+  <p>nıwos son xe hoi ximol "third house on the left"</p>
 </HisyeoTabs>
 
 As you'll see in the next section, this ordinal-on-the-right usage how we
@@ -302,8 +302,8 @@ WIP Translation
   <p>yünyoü son dus lono ü wuto eson,</p>
   <p>wuto nonkü, wuto toü, ün wuto önsu,</p>
   <p>ü möi dizel yünyoü son dus kut,</p>
-  <p>ü yök wuto düi do lon düi dus tukwos lono,</p>
-  <p>lëkın hoi üsën zoston do di hoi xokön üsën nonkü,</p>
+  <p>ü yök wuto düi xe lon düi dus tukwos lono,</p>
+  <p>lëkın hoi üsën zoston xe di hoi xokön üsën nonkü,</p>
   <p>ü wuto düi yünyoü eswen kut lono</p>
 </HisyeoTabs>
 
@@ -336,7 +336,7 @@ relative clause is used to treat the following phrase as an
 <HisyeoTabs>
   <p>lono övo lı lono kut yë wuto son.
      <em>"Today is the March 1st"</em></p>
-  <p>lono kon lözic niün lı lono mihüon do lı lono zıyön yë wuto tiü. 
+  <p>lono kon lözic niün lı lono mihüon xe lı lono zıyön yë wuto tiü. 
      <em>"His birthday is Tuesday, May 14th"</em></p>
 </HisyeoTabs>
 
@@ -364,7 +364,7 @@ in addition to the date.
 
 <HisyeoTabs>
   <p>noyo
-     hoi lono zingu do lı lono kinsë yë wuto son,
+     hoi lono zingu xe lı lono kinsë yë wuto son,
      lı cok müt nıwos.
      <em>Friday, the 15th of March, I am departing for home.</em></p>
 </HisyeoTabs>
@@ -527,7 +527,7 @@ clarity, let's use the agentive verb noun particle to create a meaning of
 
 <HisyeoTabs>
   <p>hondon lı öni kut sokovü yë di volo möi et yë zomi.&emsp;<em>"The family is the most basic unit of society."</em></p>
-  <p>küngiyo ondo do lı ëo vunlit ölë cızi müt düi yodo son öni kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
+  <p>küngiyo ondo xe lı ëo vunlit ölë cızi müt düi yodo son öni kut.&emsp;<em>"The company plans to split into two or three units."</em></p>
 </HisyeoTabs>
 
 Other than the time words, the rest of the measurement units are done by just
@@ -580,7 +580,7 @@ millimeters.
 > —Will Sullivan, Smithsonian Magazine, 2 Aug. 2024
 
 <HisyeoTabs>
-  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon do ëo lö pı mulö ölë viyën volo zënsi inpoli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
+  <p>hön tüek yë wëilun ü cıngi mëtliös yünyoü zötëstö len oxon xe ëo lö pı mulö ölë viyën volo zënsi inpoli lon toü öni kut cüti yë kildo hoi mënüs en kut sünkon.</p>
 </HisyeoTabs>
 
 <HisyeoTooltip />
