--- a/docs/reference/word_types/modifiers.mdx
+++ b/docs/reference/word_types/modifiers.mdx
@@ -67,7 +67,7 @@ chain.
 You can modify a preceding verb or noun phrase by using one of the relative
 clause particles:
 <HisyeoTabs>
-    <p>do - <em>Use this one when the subject is shared from the outer sentence</em></p>
+    <p>xe - <em>Use this one when the subject is shared from the outer sentence</em></p>
     <p>vos - <em>Use this one when the subject is changed from the outer sentence</em></p>
 </HisyeoTabs>
 
@@ -83,8 +83,8 @@ else other than the person being addressed or objects possessed by that third
 party.
 
 <HisyeoTabs>
-    <p>umo wohi do nıwos hoi zınkon uklo, wëloi hoi sëdu muni.&emsp;<em>"The woman who lives next door works in a bank."</em></p>
-    <p>övo lı non vos noyo völun do möniso övo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
+    <p>umo wohi xe nıwos hoi zınkon uklo, wëloi hoi sëdu muni.&emsp;<em>"The woman who lives next door works in a bank."</em></p>
+    <p>övo lı non vos noyo völun xe möniso övo müt nimü.&emsp;<em>"This is the video that I wanted to show you."</em></p>
     <p>lı yöüli ëto ü umo vos niün pı ılık köto onö.&emsp;<em>"The person they spoke to was really helpful."</em></p>
 </HisyeoTabs>
 
