--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -39,7 +39,7 @@ During causative sentences, a NP with this role will represent the *causee*.
 Otherwise, an NP with this role will be the agent or experiencer of the action.
 The nature of this role is that the marked noun phrase is **not** making the
 choice to commit the act of their own free will. Either they are bound/forced to
-do so or they do not have the wherewithal to make a conscious choice on the
+xe so or they xe not have the wherewithal to make a conscious choice on the
 matter and are acting out of some basic instinst.
 
 When used with the negatitive particle <HisyeoWord is='yök'/> it has the same
@@ -164,18 +164,18 @@ differentiation and causation).
   <p>noyo döstoc lipü in luvono sün sıskın moskül noyo.&emsp;<em>I got a letter from my brother.</em></p>
   <p>nimü köi döstoc yök vısun nëös sün nec öni tüek nucoto.&emsp;<em>You can't get all your news from the Internet.</em></p>
   <p>tömös övo sün dus eson tukwos dus.&emsp;<em>This manuscript is from the 1980s.</em></p>
-  <p>niün yünyoü si tömös do hoı zomo mulö sün sokovü müt deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
+  <p>niün yünyoü si tömös xe hoı zomo mulö sün sokovü müt deku.&emsp;<em>He had books piled from floor to ceiling.</em></p>
   <p>niün lı si cok hoi lono xopëk sün sınsi Xıkogö.&emsp;<em>He departed yesterday from Chicago.</em></p>
   <p>küu pono pı elentët sün pëlëtë.&emsp;<em>Face away from the wall!</em></p>
   <p>lono kon wëloı sün suhot eson müt suhot tiü.<em>The working day runs from 9 am to 5 pm.</em></p>
   <p>köi wedo oxon doinpi sün lono dus xëti yë wuto xëti.&emsp;<em>Tickets are available from 17th July.</em></p>
   <p>düstu tönkö nimü sün kut müt dus.&emsp;<em>Rate your pain from 1 to 10.</em></p>
-  <p>küu socok do köto mikdol sün kut.&emsp;<em>Start counting from 1.</em></p>
+  <p>küu socok xe köto mikdol sün kut.&emsp;<em>Start counting from 1.</em></p>
   <p>nimü köi pëüdo ozüul sün söhoük müt kon cukto.&emsp;<em>You can study anything from math to literature.</em></p>
-  <p>küu dënëmëk do dëko nı sün pındü niün yë dëko.&emsp;<em>Try to see it from his point of view.</em></p>
+  <p>küu dënëmëk xe dëko nı sün pındü niün yë dëko.&emsp;<em>Try to see it from his point of view.</em></p>
   <p>sün mulö yë nıwos küon ü nimü pı yoüti köi dëko pümi yë cënpö möi.&emsp;<em>From the top of the lighthouse you can just see the mainland.</em></p>
   <p>düi dus sün son dus kut di önsu.&emsp;<em>20 from 31 leaves 11.</em></p>
-  <p>lipü gelmıs yë voko mevüs lono pı möcipo pön do lı mevüs sün lozö yë pinton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
+  <p>lipü gelmıs yë voko mevüs lono pı möcipo pön xe lı mevüs sün lozö yë pinton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
   <p>köson nı sün ülögun nulun sëlpö sovin.&emsp;<em>It's made from pure gold.</em></p>
 </HisyeoTabs>
 
@@ -217,31 +217,31 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 4. ✅ Befitting of someone’s beliefs, needs, wants, skills, or tastes; best suited to.
 <HisyeoTabs>
-  <p>hön vos do wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı övo oxon yök nimü.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
+  <p>hön vos xe wëko mokon hoi zuko pı dündon, lı eswen en vos nimü köi tüu, pinë wëloı övo oxon yök nimü.&emsp;<em>If having to bag the groceries correctly is more than you can handle, then this isn't the job for you.</em></p>
 </HisyeoTabs>
 5. ✅ To be used or treated in a stated way, or with a stated purpose.
 <HisyeoTabs>
   <p>övo lı gongoxi ülögun nëös oxon oütö gisgül noyo.&emsp;<em>This is a new bell for my bicycle.</em></p>
   <p>piek süwit onö oxon köndodü yë üsën dizël yë umo Tomu ün Helen.&emsp;<em>The cake is for Tom and Helen's anniversary.</em></p>
-  <p>küöxı övo hoi övo oxon do mokon. dizel oxon do lı ëo vonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
+  <p>küöxı övo hoi övo oxon xe mokon. dizel oxon xe lı ëo vonmot.&emsp;<em>These apples here are for eating. The rest are for throwing away.</em></p>
 </HisyeoTabs>
 6. ✅ Supporting, in favour of. (Antonym: against)
 <HisyeoTabs>
-  <p>noi möi umo do oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö nimü.&emsp;<em>All those for the motion, raise your hands.</em></p>
+  <p>noi möi umo xe oxon pësnëhot, küu lı ëo lö pı mulö ölë züngö nimü.&emsp;<em>All those for the motion, raise your hands.</em></p>
   <p>zık oxon mozün pukü.&emsp;<em>Who's for ice-cream?</em></p>
-  <p>noyo oxon do lı lö vio oütö kiskö.&emsp;<em>I'm for going by train.</em></p>
+  <p>noyo oxon xe lı lö vio oütö kiskö.&emsp;<em>I'm for going by train.</em></p>
   <p>dus göcidon si oxon ün son dën.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
 <HisyeoTabs>
-  <p>niün moskül pit köto yök vos niün zütö nı, ün nënko ulyö ü niün wohi pëmon yök do lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
-  <p>niün lı xoinpo pı dëko pı xön eswen nënko do nocido si pügot.&emsp;<em>He looks better for having lost weight. (UK usage)</em></p>
+  <p>niün moskül pit köto yök vos niün zütö nı, ün nënko ulyö ü niün wohi pëmon yök xe lı yöüli müt niün moskül.<em>He wouldn't apologize; and just for that, she refused to help him.</em></p>
+  <p>niün lı xoinpo pı dëko pı xön eswen nënko xe nocido si pügot.&emsp;<em>He looks better for having lost weight. (UK usage)</em></p>
   <p>noyo süko niün nënko ëto mötivö.&emsp;<em>I like her for lots of reasons.</em></p>
 </HisyeoTabs>
 8. ✅ Intended to cure, remove or counteract; in order to cure, remove or counteract.
 <HisyeoTabs>
   <p>cigilsu in mokon oxon hüstun nimü.&emsp;<em>This medicine is for your cough.</em></p>
-  <p>noyo puswen do ıspulyol nozi hoi nıwos oxon müxi mitmo nomü.&emsp;<em>I need to spray my house for termites.</em></p>
+  <p>noyo puswen xe ıspulyol nozi hoi nıwos oxon müxi mitmo nomü.&emsp;<em>I need to spray my house for termites.</em></p>
 </HisyeoTabs>
 9. ⛔ Over (a period of time). 
 <HisyeoTabs>
@@ -269,14 +269,14 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 14. ⛔ In exchange for; in correspondence or equivalence with. 
 <HisyeoTabs>
-  <p>noyo döstoc tiü viyën muni nënko do wedo oütö nokdo voxo.&emsp;<em>I got five hundred pounds for that old car!</em></p>
+  <p>noyo döstoc tiü viyën muni nënko xe wedo oütö nokdo voxo.&emsp;<em>I got five hundred pounds for that old car!</em></p>
 </HisyeoTabs>
 15. ✅ In order to obtain or acquire.
 <HisyeoTabs>
-  <p>noyo pelëxu oxon mülü do hoi könyëc küngiyo yë lono cınöpu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
+  <p>noyo pelëxu oxon mülü xe hoi könyëc küngiyo yë lono cınöpu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
   <p>niün pëüdo oxon cëo yë mulö ëto.&emsp;<em>He's going for his doctorate.</em></p>
-  <p>nimü völun do lı lö oxon iskö ülzo ko.&emsp;<em>Do you want to go for coffee?</em></p>
-  <p>umo do nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwopü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
+  <p>nimü völun xe lı lö oxon iskö ülzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
+  <p>umo xe nıwos hoi möi poxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwopü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
   <p>nimü köi lı lö müt guvuyo oxon yoüti hüwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
   <p>noyo wëko muni pı söpo oxon oütö.&emsp;<em>I'm saving up for a car.</em></p>
   <p>küu motsı yök oxon zuwopü.&emsp;<em>Don't wait for an answer.</em></p>
@@ -313,7 +313,7 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 22. ⛔ (UK) Due for or facing (a certain outcome or fate).
 <HisyeoTabs>
-  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. niün pı ipüdü pono do nocido wëloı niün löicök.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
+  <p>niün lı ëo kopüt pı mülü ölë mëdüson in ondo ulyö. niün pı ipüdü pono xe nocido wëloı niün löicök.&emsp;<em>He totally screwed up that project. Now he's surely for the sack.</em></p>
 </HisyeoTabs>
 23. ⛔ (chiefly US) Out of; used to indicate a fraction, a ratio
 <HisyeoTabs>
@@ -325,14 +325,14 @@ entry](https://en.wiktionary.org/wiki/for).
 </HisyeoTabs>
 25. ⛔ Used in various more-or-less idiomatic ways to construe individual verbs, indicating various semantic relationships such as target, purpose, result, etc.; see also the entries for individual phrasal verbs, e.g. ask for, look for, stand for, etc.
 <HisyeoTabs>
-  <p>do lı ëo wuktomü ölë poxö vos umo lı si gö hoi&emsp;<em>to account for one's whereabouts</em></p>
-  <p>do diyondë umo litıwe&emsp;<em>to care for a relative</em></p>
-  <p>do wovok xön möi düi&emsp;<em>to settle for second best</em></p>
-  <p>do cülosun voüt&emsp;<em>to allow for mistakes</em></p>
+  <p>xe lı ëo wuktomü ölë poxö vos umo lı si gö hoi&emsp;<em>to account for one's whereabouts</em></p>
+  <p>xe diyondë umo litıwe&emsp;<em>to care for a relative</em></p>
+  <p>xe wovok xön möi düi&emsp;<em>to settle for second best</em></p>
+  <p>xe cülosun voüt&emsp;<em>to allow for mistakes</em></p>
 </HisyeoTabs>
 26. ✅ (nonstandard) So (that), in order to
 <HisyeoTabs>
-  <p>niün gomi si woküt kon wëloı do gıtno lono ün pıtün, oxon vos niün köi döstoc eswen woküt otıkon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
+  <p>niün gomi si woküt kon wëloı xe gıtno lono ün pıtün, oxon vos niün köi döstoc eswen woküt otıkon.&emsp;<em>He took the swing shift for he could get more overtime.</em></p>
 </HisyeoTabs>
 
 :::
@@ -415,7 +415,7 @@ verbs that indicates an opposing agent for verbs that indicate an action that is
 English, this represents some of the senses of the word "against".
 
 <HisyeoTabs>
-  <p>nı lı tüu kutın hön do oütö pı ximu vio woyü dën pono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
+  <p>nı lı tüu kutın hön xe oütö pı ximu vio woyü dën pono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
   <p>nimü dën völni yë göcidon ko.&emsp;<em>"Are you against freedom of choice?"</em></p>
 </HisyeoTabs>
 
@@ -473,7 +473,7 @@ boundaries in time or space that the action occurs between. In English, this
 represents some of the senses of the word "between".
 
 <HisyeoTabs>
-  <p>köi mokon ü noyo cö wutun yë hövezi gemolen et do gıtno piek.&emsp;<em>"I could eat a hamburger."</em></p>
+  <p>köi mokon ü noyo cö wutun yë hövezi gemolen et xe gıtno piek.&emsp;<em>"I could eat a hamburger."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -493,7 +493,7 @@ it can also represent the English phrase "as if".
 
 <HisyeoTabs>
   <p>xoinpo dëko ü loı mıslı sıskın loı.&emsp;<em>"He looks like his brother."</em></p>
-  <p>si tüu cö künhiun pis ü umo moskül nokdo mıslı do ke zigil.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
+  <p>si tüu cö künhiun pis ü umo moskül nokdo mıslı xe ke zigil.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -577,7 +577,7 @@ start with a particle. There are two special words available that can be used
 to introduce a noun clause:
 
 <ol>
-  <li><HisyeoWord is='do'/> - Use this one for infinitives and gerunds</li>
+  <li><HisyeoWord is='xe'/> - Use this one for infinitives and gerunds</li>
   <li><HisyeoWord is='vos'/> - Use this one for complete inner sentences</li>
 </ol>
 
@@ -588,7 +588,7 @@ expressed by the inner sentence but referred holisitically as an object in the
 outer sentence.
 
 <HisyeoTabs>
-  <p>lı ëo govon ölë noyo ü <strong>do</strong> cöüvon micin.&emsp;<em>"Cooking fish makes me disgusted"</em></p>
+  <p>lı ëo govon ölë noyo ü <strong>xe</strong> cöüvon micin.&emsp;<em>"Cooking fish makes me disgusted"</em></p>
 </HisyeoTabs>
 
 
@@ -602,7 +602,7 @@ of a loose relationship than using a noun clause as a gerund. "acts/matters of
 eating meat" means something different from "eating meat".
 
 <HisyeoTabs>
-    <p>noyo toüyen do mokon oksün.</p>
+    <p>noyo toüyen xe mokon oksün.</p>
     <p>noyo toüyen kon mokon oksün.</p>
 </HisyeoTabs>
 
