--- a/docs/reference/word_types/verbs.mdx
+++ b/docs/reference/word_types/verbs.mdx
@@ -74,7 +74,7 @@ frame the predicate of a question, it has the effect of asking for permission.
 <HisyeoTabs>
     <p>hoi ılık vos noyo lı dës dëko, ü noyo köi dëko pı xön ëto.&emsp;<em>Before I was blind, I could see very well.</em></p>
     <p>noyo goniso vos niün köi tüu nı hön vos niün völun pı hokiki.&emsp;<em>I think he could do it if he really wanted to.</em></p>
-    <p>noyo xiwon do köi lı xikö ze.&emsp;<em>I wish I could fly!</em></p>
+    <p>noyo xiwon xe köi lı xikö ze.&emsp;<em>I wish I could fly!</em></p>
     <p>noyo köi yön öntön tetëk mulö pı ilxizuk ko.&emsp;<em>Could I borrow your coat?</em></p>
     <p>noyo köi sıtyo hoı ulyö ko.&emsp;<em>May I sit there?</em></p>
     <p>mocko yë umo Xılödingu köi lı gö yodo köi lı yök gö hoi dıpo dinci.&emsp;<em>Schrödinger's cat may or may not be in the box</em></p>
@@ -82,7 +82,7 @@ frame the predicate of a question, it has the effect of asking for permission.
     <p>noyo köi lı lö müt köndodü lëkın noyo göcidon si yök pı pıslon.&emsp;<em>I might go to the party, but I haven't decided yet.</em></p>
     <p>noyo köi lı gö hoi sıtyo küldü lëkin noyo pı möcipo völun vos wëilun müt noyo mıslı umo wohi.&emsp;<em>I might be in a wheelchair, but I still want to be treated as a lady.</em></p>
     <p>noyo köi gomi piek potuk süwit vëlcin.&emsp;<em>Might I take the last biscuit?</em></p>
-    <p>nü köi puswen vın do lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
+    <p>nü köi puswen vın xe lı len eswen yoüti ci.&emsp;<em>Yeah, I think we might need something a bit sturdier.</em></p>
     <p>nimü köi tenkin ulyö ko.&emsp;<em>Can you hear that?</em></p>
     <p>niün köi köto vio hiskünco Ingulıc, Vulonsë, ün Döic.&emsp;<em>She can speak English, French, and German.</em></p>
 </HisyeoTabs>
@@ -94,13 +94,13 @@ predicate occurring is dependent on some other circumstance that is either
 explicitly described or implied.
 
 <HisyeoTabs>
-    <p>hoi lono kut yë poxö kon pëüdo ü noyo monodo umo wohi do pit di hünsüon noyo.&emsp;<em>On my first day at University, I met the woman who would become my wife.</em></p>
-    <p>hön vos noyo lı pilüs hoi do köntësto oxon yoküntik, ü noyo pit cüdo vun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
-    <p>noyo pit yüpik do lı lö monodo.&emsp;<em>I would love to come and visit.</em></p>
+    <p>hoi lono kut yë poxö kon pëüdo ü noyo monodo umo wohi xe pit di hünsüon noyo.&emsp;<em>On my first day at University, I met the woman who would become my wife.</em></p>
+    <p>hön vos noyo lı pilüs hoi xe köntësto oxon yoküntik, ü noyo pit cüdo vun düi muni müt küngiyo yöüli.&emsp;<em>If I won the lottery, I would give half the money to charity.</em></p>
+    <p>noyo pit yüpik xe lı lö monodo.&emsp;<em>I would love to come and visit.</em></p>
     <p>küu dëko piek süwit yë sopölë xön ëto ze. noyo pit mokon möi ulyö pı mülü ze.&emsp;<em>Look at that yummy cake! I would eat that all up!</em></p>
-    <p>noyo müt nimü pit sölü do sityo pı koli.&emsp;<em>I would ask you all to sit down.</em></p>
+    <p>noyo müt nimü pit sölü xe sityo pı koli.&emsp;<em>I would ask you all to sit down.</em></p>
     <p>noyo müt goniso vos niün lı si cok pı ılık.&emsp;<em>I would imagine that they have already left.</em></p>
-    <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si do pesol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
+    <p>niün lı köxentë yë mevüs oxon vos niün pit punyentoc si xe pesol zınkon.&emsp;<em>He's very security-conscious, so he would have remembered to lock the door.</em></p>
     <p>niün pit lı gö hoi sınsi Lundun pı ipüdü cokyen.&emsp;<em>They would be arriving in London round about now.</em></p>
 </HisyeoTabs>
 
@@ -238,9 +238,9 @@ The negatitive verb modifier (<HisyeoWord is='yök'/>) turns the verb phrase
 into the negated version of itself. In English, this is the "not" adverb.
 
 <HisyeoTabs>
-    <p>hön do yök züyı ozüul yonlüs, noyo lı si lö pı vöhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
-    <p>nimü puswen yök do xontün cızi.&emsp;<em>You don’t need to trouble yourself.</em></p>
-    <p>mötivö yöcno lı yök do vunsüt.&emsp;<em>The objective is not to lose.</em></p>
+    <p>hön xe yök züyı ozüul yonlüs, noyo lı si lö pı vöhon.&emsp;<em>Not knowing any better, I went ahead.</em></p>
+    <p>nimü puswen yök xe xontün cızi.&emsp;<em>You don’t need to trouble yourself.</em></p>
+    <p>mötivö yöcno lı yök xe vunsüt.&emsp;<em>The objective is not to lose.</em></p>
     <p>küu tüu yök ulyö.&emsp;<em>Don't do that.</em></p>
 </HisyeoTabs>
 
