--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -46,7 +46,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>küu lı cok ze.&emsp;<em>Go away!</em></p>
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
 <p>nimü küu lı lö.&emsp;<em>You should go.</em></p>
-<p>noyo ke lı xowosë hön do lı lö.&emsp;<em>I will be happy to go.</em></p>
+<p>noyo ke lı xowosë hön xe lı lö.&emsp;<em>I will be happy to go.</em></p>
 <p>niün ke lı gö hoi övo pı zelen.&emsp;<em>He will arrive soon.</em></p>
 <p>gundolë yë lözic lı si lö pı ınvultin sün poxö.&emsp;<em>The baby's ball has rolled away.</em></p>
 <p>düi umo moskül xonluk wëloı ovek xokön dizel.&emsp;<em>The two boys are working together.</em></p>
