--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -105,7 +105,7 @@ cardinal number).
 
 <HisyeoTabs>
   <p>son sütüö lı cok sün zomo.&emsp;<em>"Three friends are leaving the group."</em></p>
-  <p>nü puswen son dus tiü ëvun oxon do piek nı süwit övo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
+  <p>nü puswen son dus tiü ëvun oxon xe piek nı süwit övo.&emsp;<em>"We need 35 minutes to bake this cake."</em></p>
 </HisyeoTabs>
 
 Providing a quantity determiner of "one" (<HisyeoWord is='kut'/>) can be used as a kind of
@@ -117,8 +117,8 @@ Place a numeral word as a regular modifier (after the head noun) and it will
 represent a relative position of an item in a sequence (an ordinal number).
 
 <HisyeoTabs>
-  <p>lı nomü son do sün ximol, ü süko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
-  <p>noyo lı umo nonkü do lı cok.&emsp;<em>"I was the fourth person to leave."</em></p>
+  <p>lı nomü son xe sün ximol, ü süko noyo.&emsp;<em>"The third tree from the left is my favorite."</em></p>
+  <p>noyo lı umo nonkü xe lı cok.&emsp;<em>"I was the fourth person to leave."</em></p>
 </HisyeoTabs>
 
 ### Multiplier
@@ -156,8 +156,8 @@ In order to specify that something is double the degree of the associated
 noun-phrase. You prefix a quantity phrase with <HisyeoWord is='xokön'/>.
 
 <HisyeoTabs>
-    <p>motüo wohi noyo pı xokön düi diyondë hön do pı elentët lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
-    <p>lı sonkon ü do pesol zınkon, ün pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
+    <p>motüo wohi noyo pı xokön düi diyondë hön xe pı elentët lı ëo ınvultin öni düstu woküt.&emsp;<em>My mother was always doubly careful when winding the clock.</em></p>
+    <p>lı sonkon ü xe pesol zınkon, ün pı xokön son hön pıtün.&emsp;<em>It is important to lock the door, and triply so at night.</em></p>
     <p>lolü nimü oncëmon ëo xokön düi tönkö hön doho noyo.&emsp;<em>Your words feel doubly hurtful given my sacrifices.</em></p>
 </HisyeoTabs>
 
@@ -174,11 +174,11 @@ exact numerical quantity the noun actually is.
 <HisyeoTabs>
   <p><strong>total/all:</strong>&emsp;möi sütüö noyo süko kontol doi osyen.&emsp;<em>All my friends like classical music</em></p>
   <p><strong>highest/most:</strong>&emsp;övo lı numüno yë eswen sonkon en möi.&emsp;<em>This is the most important example.</em></p>
-  <p><strong>high/many:</strong>&emsp;lı ëto toliko pësu yë do cöüvon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
-  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë do tüu övo, en vos noyo köi tüek vio kut.&emsp;<em>"There are more ways to do this than I can count."</em></p>
+  <p><strong>high/many:</strong>&emsp;lı ëto toliko pësu yë xe cöüvon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
+  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu övo, en vos noyo köi tüek vio kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
   <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi övo pı ipüdü.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoüti umo süko kon mühoyon.&emsp;<em>"Some people like camping."</em></p>
-  <p><strong>lowest/least:</strong>&emsp;noyo pı tölki yünyoü zötëstö oxon do cıvü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
+  <p><strong>lowest/least:</strong>&emsp;noyo pı tölki yünyoü zötëstö oxon xe cıvü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
   <p><strong>zero/none:</strong>&emsp;xünyu yë düi umo lı sumon.&emsp;<em>No two people are the same.</em></p>
 </HisyeoTabs>
 
