--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -40,9 +40,9 @@ Using this knowledge, we can build the first sentences for meeting people.
 ### Meeting Someone
 
 <HisyeoTabs>
-    <p>noyo monodo niün hoi suhot dus&emsp;<em>I am meeting them at 10</em></p>
-    <p>nü küu monodo oxon cöüvon pıtün&emsp;<em>Let's meet for supper</em></p>
-    <p>nimü völun xe monodo noyo hoi cıhöü ko&emsp;<em>Do you want to meet me later?</em></p>
+    <p>noyo monodo niün hoi suhot dus.&emsp;<em>I am meeting them at 10</em></p>
+    <p>nü küu monodo oxon cöüvon pıtün ci.&emsp;<em>Let's meet for supper, sound good?</em></p>
+    <p>nimü völun xe monodo noyo hoi cıhöü ko.&emsp;<em>Do you want to meet me later?</em></p>
 </HisyeoTabs>
 
 ### How To Greet
@@ -63,6 +63,14 @@ Using this knowledge, we can build the first sentences for meeting people.
 </HisyeoTabs>
 
 ### When You'll Meet Again
+
+<HisyeoTabs>
+    <p>nü küu monodo pı woküt dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
+    <p>hoi woküt zık ü noyo köi dëko nimü pı dizel.&emsp;<em>When can I see you again?</em></p>
+    <p>nü köi döstoc iskö hoi pıtün yë lono unpol ci.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
+    <p>nimü lı völni hoi suhot tukwos yë pıtün övo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
+    <p>noyo xiwon xe dëko nimü pı zelen ëto löicök.&emsp;<em>I so hope to see you very soon!</em></p>
+</HisyeoTabs>
 
 ## Introductions
 
