add some descriptive grammar details of the sentences in the greetings lesson

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -21,23 +21,37 @@ subordinate clause (an inner sentence). The subordinate clause acts similar to a
 allows you to refer to the action of the verb as a noun.
 
 <HisyeoTabs>
-    <p>lı küzoü ü xe kelo vio öni tüek.&emsp;<em>Playing on computers is awesome.</em></p>
+    <p>.&emsp;<em></em>Playing on computers is awesome.</p>
+    <p>lı küzoü ü xe kelo vio öni tüek.&emsp;<em>It is awesome to play on computers.</em></p>
     <p>noyo süko xe kelo vio öni tüek.&emsp;<em>I like playing on computers.</em></p>
 </HisyeoTabs>
 
-I didn't start the first example with a subject and instead provided it after
-the verb (<HisyeoWord is='lı'/>) by using the subject preposition
-(<HisyeoWord is='ü'/>) because this allowed me to introduce the subordinate
-clause at the end of the sentence which reduces the need for a comma or a pause
-when speaking. In the second sentence, since the subordinate clause is being
-provided as the object of the verb, it also is the last argument of the
-sentence.
+Starting the first sentence with a subordinate clause requires that you use a
+pause (a comma, orthographically) to ensure that the listener understands this
+to be an inner clause of the sentence. However, second example doesn't start the
+with a subject and instead provideds it *after* the verb (<HisyeoWord is='lı'/>)
+by using the subject preposition (<HisyeoWord is='ü'/>). This allows you to
+introduce the subordinate clause at the end of the sentence which reduces the
+need for the pause when speaking. In the third sentence, since the subordinate
+clause is being provided as the object of the verb, it also is the last argument
+of the sentence and avoids the need for a pause.
 
 ## Meet & Greet
 
-Using this knowledge, we can build the first sentences for meeting people.
+Now with some grammar under our belt, let's learn how to meet and greet your
+fellow Hisyëans!
 
 ### Meeting Someone
+
+In the first sentence, we are using a simple sentence with a transitive verb,
+two pronouns and a preposition that is marking time. In the next sentence, we
+are using a deontic verb phrase coupled with propositive sentence ender to
+indicate the sentence describes a desired future and that the speaker is looking
+for agreement or approval from the listener. The sentence also uses the
+beneficiary/purpose preposition indicating what the meeting is for. Finally, the
+last sentence is where we make use of a subjective subordinate clause to
+describe the desiring (the verb of the main predicate) of an action (the
+subjective subordinate clause).
 
 <HisyeoTabs>
     <p>noyo monodo niün hoi suhot dus.&emsp;<em>I am meeting them at 10</em></p>
@@ -46,6 +60,13 @@ Using this knowledge, we can build the first sentences for meeting people.
 </HisyeoTabs>
 
 ### How To Greet
+
+For the initial contact with another person, there are some common expressions
+used as pleasantries. Each one uses a subjective subordinate clause as the
+experiencer of a complement. In the first and last sentences, the complement is
+adjectival. In the middle sentence, the complement is unsaid and instead an
+adverb is provided. This kind of sentence structure allows you to link an adverb
+to the action inside of the subjective subordinate clause.
 
 <HisyeoTabs>
     <p>lı xön ü xe monodo nimü löicök.&emsp;<em>It is so nice to meet you.</em></p>
@@ -65,7 +86,7 @@ Using this knowledge, we can build the first sentences for meeting people.
 ### When You'll Meet Again
 
 <HisyeoTabs>
-    <p>nü küu monodo pı woküt dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
+    <p>nü küu monodo pı dizel zelen ci.&emsp;<em>Let's meet again soon, ok?</em></p>
     <p>hoi woküt zık ü noyo köi dëko nimü pı dizel.&emsp;<em>When can I see you again?</em></p>
     <p>nü köi döstoc iskö hoi pıtün yë lono unpol ci.&emsp;<em>We could get a drink on Saturday night, sound good?</em></p>
     <p>nimü lı völni hoi suhot tukwos yë pıtün övo ko.&emsp;<em>Are you free at 8pm tonight?</em></p>
