fix thousand word usages

--- a/docs/lessons/numbers-dates-time.mdx
+++ b/docs/lessons/numbers-dates-time.mdx
@@ -79,10 +79,10 @@ that you'll need to count all the way up to a trillion.
         <tr><td>100</td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
         <tr><td>234</td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td>1000</td><td><HisyeoText kind='latin'>cın kut</HisyeoText></td></tr>
-        <tr><td>1,000,000</td><td><HisyeoText kind='latin'>cın düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='latin'>cın kut,eson viyën eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>cın düi, düi viyën son dus nonkü cın kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
+        <tr><td>1000</td><td><HisyeoText kind='latin'>elvü kut</HisyeoText></td></tr>
+        <tr><td>1,000,000</td><td><HisyeoText kind='latin'>elvü düi</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='latin'>elvü kut,eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='latin'>elvü düi, düi viyën son dus nonkü elvü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -144,10 +144,10 @@ that you'll need to count all the way up to a trillion.
         <tr><td>100</td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
         <tr><td>101</td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
         <tr><td>234</td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td>1000</td><td><HisyeoText kind='abugida'>cın kut</HisyeoText></td></tr>
-        <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>cın düi</HisyeoText></td></tr>
-        <tr><td>1,999</td><td><HisyeoText kind='abugida'>cın kut,eson viyën eson dus eson</HisyeoText></td></tr>
-        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>cın düi, düi viyën son dus nonkü cın kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
+        <tr><td>1000</td><td><HisyeoText kind='abugida'>elvü kut</HisyeoText></td></tr>
+        <tr><td>1,000,000</td><td><HisyeoText kind='abugida'>elvü düi</HisyeoText></td></tr>
+        <tr><td>1,999</td><td><HisyeoText kind='abugida'>elvü kut,eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td>1,234,567</td><td><HisyeoText kind='abugida'>elvü düi, düi viyën son dus nonkü elvü kut, tiü viyën toü dus xëti</HisyeoText></td></tr>
       </tbody>
     </table>
   </TabItem>
@@ -155,7 +155,7 @@ that you'll need to count all the way up to a trillion.
 
 ## Tens, Thousands, Millions
 
-As you can see above, you use the cın with the number directly following
+As you can see above, you use <HisyeoWord is='elvü'/> with the number directly following
 it representing how many groups of 3 places. This is the same amount as we put
 commas or periods in our number representations.
 
