--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -58,9 +58,9 @@ by using the below method of assembling parts of a number:
         <tr><td><p>100</p></td><td><HisyeoText kind='latin'>viyën</HisyeoText></td></tr>
         <tr><td><p>101</p></td><td><HisyeoText kind='latin'>viyën kut</HisyeoText></td></tr>
         <tr><td><p>234</p></td><td><HisyeoText kind='latin'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>cın kut</HisyeoText></td></tr>
-        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>cın düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>cın kut, eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td><p>1000</p></td><td><HisyeoText kind='latin'>elvü kut</HisyeoText></td></tr>
+        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='latin'>elvü düi</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='latin'>elvü kut, eson viyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
   <TabItem value="opügido" label="ɽʋʄꜿɟʌ">
@@ -93,9 +93,9 @@ by using the below method of assembling parts of a number:
         <tr><td><p>100</p></td><td><HisyeoText kind='abugida'>viyën</HisyeoText></td></tr>
         <tr><td><p>101</p></td><td><HisyeoText kind='abugida'>viyën kut</HisyeoText></td></tr>
         <tr><td><p>234</p></td><td><HisyeoText kind='abugida'>düi viyën son dus nonkü</HisyeoText></td></tr>
-        <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>cın kut</HisyeoText></td></tr>
-        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>cın düi</HisyeoText></td></tr>
-        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>cın kut, eson viyën eson dus eson</HisyeoText></td></tr>
+        <tr><td><p>1000</p></td><td><HisyeoText kind='abugida'>elvü kut</HisyeoText></td></tr>
+        <tr><td><p>1,000,000</p></td><td><HisyeoText kind='abugida'>elvü düi</HisyeoText></td></tr>
+        <tr><td><p>1,999</p></td><td><HisyeoText kind='abugida'>elvü kut, eson viyën eson dus eson</HisyeoText></td></tr>
     </table>
   </TabItem>
 </Tabs>
