add more sentences.

--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -42,7 +42,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>pı zelen ke niltügu hüzon.&emsp;<em>Soon the rain will stop.</em></p>
 <p>noyo xiwon vos pı zelen niltügu hüzon.&emsp;<em>I hope the rain stops soon.</em></p>
 <p>pı kut ü zonwul hönyo nıwos hoi övo.&emsp;<em>Once wild animals lived here.</em></p>
-<p>pı dilë ü niün vohoso si. &emsp;<em>Slowly she looked around.</em></p>
+<p>pı dilë ü niün vohoso si.&emsp;<em>Slowly she looked around.</em></p>
 <p>küu lı cok ze.&emsp;<em>Go away!</em></p>
 <p>nü küu lı lö.&emsp;<em>Let's go!</em></p>
 <p>nimü küu lı lö.&emsp;<em>You should go.</em></p>
@@ -59,32 +59,32 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>zowo yë umo Henli köi yosten yök titon dündon. &emsp;<em>Henry's dog is lost.</em></p>
 <p>mocko noyo lı nëlö.&emsp;<em>My cat is black.</em></p>
 <p>döcui umo yë umo wohi xonluk cüti lı kopüt.&emsp;<em>The little girl's doll is broken.</em></p>
-<p>noyo &emsp;<em>I usually sleep soundly.</em></p>
-<p>&emsp;<em>The children ran after Jack.</em></p>
-<p>&emsp;<em>I can play after school.</em></p>
-<p>&emsp;<em>We went to the village for a visit.</em></p>
-<p>&emsp;<em>We arrived at the river.</em></p>
-<p>&emsp;<em>I have been waiting for you.</em></p>
-<p>&emsp;<em>The campers sat around the fire.</em></p>
-<p>&emsp;<em>A little girl with a kitten sat near me.</em></p>
-<p>&emsp;<em>The child waited at the door for her father.</em></p>
-<p>&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
-<p>&emsp;<em>Were you born in this village?</em></p>
-<p>&emsp;<em>Can your brother dance well?</em></p>
-<p>&emsp;<em>Did the man leave?</em></p>
-<p>&emsp;<em>Is your sister coming for you?</em></p>
-<p>&emsp;<em>Can you come tomorrow?</em></p>
-<p>&emsp;<em>Have the neighbors gone away for the winter?</em></p>
-<p>&emsp;<em>Does the robin sing in the rain?</em></p>
-<p>&emsp;<em>Are you going with us to the concert?</em></p>
-<p>&emsp;<em>Have you ever travelled in the jungle?</em></p>
-<p>&emsp;<em>We sailed down the river for several miles.</em></p>
-<p>&emsp;<em>Everybody knows about hunting.</em></p>
-<p>&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
-<p>&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
-<p>&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
-<p>&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
-<p>&emsp;<em>The little seeds waited patiently under the snow for the warm spring sun.</em></p>
+<p>noyo pı sodolun lı conzodo sunpülno.&emsp;<em>I usually sleep soundly.</em></p>
+<p>mënyüu onö pı wiki lı lö oxon xe doicël umo Zek.&emsp;<em>The children ran after Jack.</em></p>
+<p>noyo köi kelo hoi cıhöü woküt kon pëüdo.&emsp;<em>I can play after school.</em></p>
+<p>nü lı si lö müt sınsi oxon xe monodo.&emsp;<em>We went to the village for a visit.</em></p>
+<p>nü lı si gik hoi xüto.&emsp;<em>We arrived at the river.</em></p>
+<p>noyo motsı si hön nimü.&emsp;<em>I have been waiting for you.</em></p>
+<p>öni mühoyon sıtyo si hoi ünhılun yë mötö onö.&emsp;<em>The campers sat around the fire.</em></p>
+<p>umo wohi xonluk cüti xe ovek mocko xonluk, sıtyo si hoi vëlkonö noyo.&emsp;<em>A little girl with a kitten sat near me.</em></p>
+<p>mënyüu motsı si hoi zınkon hön motüo moskül niün.&emsp;<em>The child waited at the door for her father.</em></p>
+<p>hoi lono xopëk ü umo wohi xonluk yë nokdo möi nocido si mocko xonluk niün.&emsp;<em>Yesterday the oldest girl in the village lost her kitten.</em></p>
+<p>lözic nimü hoi sınsi övo ko.&emsp;<em>Were you born in this village?</em></p>
+<p>sıskın moskül nimü köi lı cıvulo pı xön ko.&emsp;<em>Can your brother dance well?</em></p>
+<p>umo moskül lı si cok ko.&emsp;<em>Did the man leave?</em></p>
+<p>sıskın wohi nimü lı gik oxon nimü ko.&emsp;<em>Is your sister coming for you?</em></p>
+<p>nimü köi lı gik hoi lono uklo ko.&emsp;<em>Can you come tomorrow?</em></p>
+<p>öni nıwos vëlkonö lı si cok hön yogö üsën cunyü.&emsp;<em>Have the neighbors gone away for the winter?</em></p>
+<p>timiok hünsık pı sodolun kontol hoi hüzon ko.&emsp;<em>Does the robin sing in the rain?</em></p>
+<p>nimü lı lö ovek nü müt sikin kon kontol.&emsp;<em>Are you going with us to the concert?</em></p>
+<p>nimü hoi ozüul woküt tulutı piömu nomü hüzon ko.&emsp;<em>Have you ever travelled in the jungle?</em></p>
+<p>nü oütö vio woyü müt cën yë xüto onö lon yoüti mönpılı xokön.&emsp;<em>We sailed down the river for several miles.</em></p>
+<p>xokön umo vısun kon wëtodü.&emsp;<em>Everybody knows about hunting.</em></p>
+<p>hoi lono xolxili yë cıhöü poxö yë dönüxın mönpılı yë pinton lono ü nü socok si müt tohılök pümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
+<p>umo Ton lı si liülë nënko cülci yë vonolon.&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
+<p>umo moskül nokdo ovek nüyo yë kon lö wowoë lı si totsı hoi söpo yë pëlëtë gosil.&emsp;<em>An old man with a walking stick stood beside the fence.</em></p>
+<p>ölë nıwos yë cüi nomü lı si ëo vicwo ü tolën nomü weltö.&emsp;<em>The squirrel's nest was hidden by drooping boughs.</em></p>
+<p>oüdi cüti motsı si pı sonti hoi sël yë pölvëlë hüzon pukü müt pinton lono yë yogö üsën niök et yë tüt yoüti.&emsp;<em>The little seeds waited patiently under the snow for the warm spring sun.</em></p>
 <p>&emsp;<em>Many little girls with wreaths of flowers on their heads danced around the bonfire.</em></p>
 <p>&emsp;<em>The cover of the basket fell to the floor.</em></p>
 <p>&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
